@@ -38,7 +38,7 @@ public class ConfigUtils {
         try {
             logger.info("Loading images.json");
 
-            final String file = Files.readString(new File("images.json").toPath());
+            final String file = new String(Files.readAllBytes(new File("images.json").toPath()));
 
             this.images = new JSONObject(file);
 
